--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "segundo-proyecto-backend",
   "version": "1.0.0",
+  "engines": {
+    "node": "16.15.1"
+    }, 
   "description": "",
   "main": "index.js",
   "scripts": {
