--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "engines": {
     "node": "16.15.1"
-    }, 
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -20,7 +20,8 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.5",
-    "nodemailer": "^6.7.5"
+    "nodemailer": "^6.7.5",
+    "serve": "^13.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
