--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "getelementsbyid": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.5",
     "nodemailer": "^6.7.5",
